# future-market

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  scraped_articles.json
.docker/: Dockerfile.data_cdc  Dockerfile.data_pipeline  Dockerfile.feature_pipeline
notebooks/: eda.ipynb  news_sentiment_eda.ipynb  stock_data_eda.ipynb
src/: main.py
src/core/: __init__.py  mq.py
src/core/db/: __init__.py  mongo.py  qdrant.py
src/data_cdc/: __init__.py  main.py  news_sentiment_cdc.py  stock_data_cdc.py
src/data_pipeline/: __init__.py  crawler.py  main.py  news_sentiment.py  stock_data.py
src/data_pipeline/.cph/: .main.py_715c869368bf92e0a7e07d6d8fbb099a.prob
src/feature_pipeline/: __init__.py  input_stream.py  main.py  mongo_change_streams.py  news_sentiment_data_flow.py  output_stream.py  stock_data_flow.py
src/models/: __init__.py  vertexai_content_extractor.py
src/utils/: __init__.py  config.py
