[tool.poetry]
name = ""  # Set empty to disable packaging
version = "0.1.0"
description = ""
authors = ["Yordanos Wuletaw <yordanoswuletaw@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
structlog = ">=25.2.0,<26.0.0"
pydantic = ">=2.10.6,<3.0.0"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
